# lab06

./: CMakeLists.txt  README.md
.github/workflows/: CPack.yaml  release.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt
